# LocReg

./: .gitattributes  .gitignore  README.md  octave-workspace  requirements.txt  setup.py
SimulationSets/classical_prob/: gen_summary_tables.py
Simulations/: LRalgo.py  RGScodesnippet.ipynb  brainLRalgo.py  distribution_tables.Rmd  gencythonmap.py  heatmap_unequal_width_All.py  helpfunc_gammasearch.py  importantcode.py  l_curve_corner.py  lcurve_functions.py  locreg_l1_l2_0915.py  locregonceforall.py  my_functions.pyx  once_for_all_ALL.py  resolutionpeakanalysisfinal.py  runallscripts.py  setuplocreg.py  shiftgamma.py  testing_Ito_LR.py  testseed.py  upenvslocreg.py
Simulations/5by5gridMRRscript/: clean_gen_spanreg_heatmap.py  gen_spanreg_heatmap.py  gen_spanreg_heatmap_copyreference.py  gen_spanreg_heatmap_upen.py  gen_spanreg_heatmap_upenZama.py  gen_spanreg_map_oldcode.py  generateheatmap2.py  generatemap3.py  genmap5.py  genmap6.py  locregderivsqrpulse.py  peakresolutiontables.py.py
Simulations/brainscripts/: braindatascript.py  braintestpx.py  calc_brain_noise.py  cleanbraindatascript.py  myelin_plot.py  myelinmapcomparison.py  noise_addition_experiment.py  noisy_addition_experiment_process_and_plots.py  processedmyelinplot.py  spanreg_SNR_experiment.py  testingprocessing.py  testplot2.py  testplots.py
Simulations/classicalproblemscripts/: baart_prob.py  blur_ito.py  deriv2_ito.py  foxgood_ito.py  foxgood_prob.py  gravity_prob_030922.py  i_laplaceLR.py  ilaplace_prob.py  phillips_ito.py  run_all_scripts2.py  testing_kernels.py  wing_ito.py  wing_prob.py
Simulations/leastsquares/: Leastsquaresproblem6_30.ipynb
Simulations/multiparameter_estimationscripts/: 2D_multi_reg_MRR_0116.py
Utilities_functions/: LocReg_NEW_NNLS.py  LocReg_unconstrained.py  LocReg_unconstrainedB.py  LocReg_v2.py  TwoParam_LR.py  create_tables.py  discrep_L2.py  lsqnonneg.py  making_MRRSpanRegfigure.py  pasha_gcv.py  stackedimagesclassicalproblems.py  tikhonov_vec.py
ZamaUPEN/1D_test/: LocMax.m  T1.m  (+6 more)
regu/: baart.py  discrep.py  find_corner.py  foxgood.py  gcv.py  gcvfun.py  heat.py  i_laplace.py  l_corner.py  lcfun.py  new_gcv.py  newton_method.py  nonnegtik_hnorm.py  phillips.py  ppbrk.py  saveforlatermyelinmaps.py  spleval.py  spmak.py  tikhonov.py  wing.py
tests/: test_integration.py
tools/: tools_README.md
tools/mosek/10.2/tools/examples/rust/: Cargo.toml
(+2495 files in other folders)
